Fixed responsiveness of video on smaller screen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2461,6 +2461,15 @@
 		overflow: hidden;
 	}
 
+	@media screen and (max-width: 726px) {
+		.homepage .homepage-right .intro-video {
+			height: 100%;
+		}
+
+		.homepage .homepage-right .intro-video > * {
+			width: auto;
+		}
+	}
 
 /* Poptrox */
 
